--- a/Webshop/Webshop.csproj
+++ b/Webshop/Webshop.csproj
@@ -18,4 +18,7 @@
     <PackageReference Include="MySql.Data" Version="8.0.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Webshop.json" />
+  </ItemGroup>
 </Project>
