--- a/Webshop/Webshop.csproj
+++ b/Webshop/Webshop.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <Content Remove="Webshop.json" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Models\Carts.cs" />
+  </ItemGroup>
 </Project>
